Fixed bugs in claim analytics
