# core/src/main/java/com/klaimz/model/api/ChartAnalyticsRequest.java
@@ -4,7 +4,9 @@ import com.klaimz.model.FilterableRequest;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
 @NoArgsConstructor
@@ -14,4 +16,19 @@ public class ChartAnalyticsRequest implements FilterableRequest {
     private String aggregateBy;
     private String aggregateType;
     private String chartType;
+
+
+    @Override
+    public List<String> getFields() {
+        var fields = getFilterFields();
+
+        if (groupBy != null) {
+            fields.add(groupBy);
+        }
+        if (aggregateBy != null) {
+            fields.add(aggregateBy);
+        }
+
+        return fields;
+    }
 }
